Avoid building lots of ApplicationInstances
Avoid building a full ApplicationInstance for each node...
 - for all nodes in the node repo when reporting metrics repo every minute, and
 - for all nodes in any /nodes/v1/node response