@@ -1,66 +1,91 @@
 // Copyright 2017 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.service.monitor;
 
+import com.yahoo.config.model.api.ApplicationInfo;
 import com.yahoo.vespa.applicationmodel.ApplicationInstance;
 import com.yahoo.vespa.applicationmodel.ApplicationInstanceReference;
 import com.yahoo.vespa.applicationmodel.HostName;
 import com.yahoo.vespa.applicationmodel.ServiceCluster;
 import com.yahoo.vespa.applicationmodel.ServiceInstance;
 
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
- * The ServiceModel is almost a mirror of the SuperModel, except that it
- * also gives ServiceStatus on each service, and there may be
- * artificial applications like the config server "application".
+ * The service model is the union of the duper model and the service monitor, and presented
+ * as classes from the {@code application-model} module.
+ *
+ * <p>The duper model contains the latest {@link ApplicationInfo} of both tenant and infrastructure
+ * applications. The service monitor provides Slobrok or {@code /state/v1/health} information
+ * on (most) services. The application model presents an application as a set of clusters, and
+ * each cluster a set of services, and each service is associated with a particular host
+ * and has a health status.</p>
+ *
+ * @author hakonhall
  */
 public class ServiceModel {
 
-    private final Map<ApplicationInstanceReference, ApplicationInstance> applications;
-    private final Map<HostName, ApplicationInstance> applicationsByHostName;
+    private final Map<ApplicationInstanceReference, ApplicationInstance> applicationsByReference;
 
-    public ServiceModel(Map<ApplicationInstanceReference, ApplicationInstance> applications) {
-        this.applications = Collections.unmodifiableMap(applications);
-        this.applicationsByHostName = Collections.unmodifiableMap(applicationsByHostNames(applications.values()));
+    private Map<HostName, ApplicationInstance> applicationsByHostName = null;
+    private Map<HostName, List<ServiceInstance>> servicesByHostName = null;
+
+    public ServiceModel(Map<ApplicationInstanceReference, ApplicationInstance> applicationsByReference) {
+        this.applicationsByReference = Collections.unmodifiableMap(Map.copyOf(applicationsByReference));
     }
 
     public Map<ApplicationInstanceReference, ApplicationInstance> getAllApplicationInstances() {
-        return applications;
+        return applicationsByReference;
     }
 
     public Optional<ApplicationInstance> getApplicationInstance(ApplicationInstanceReference reference) {
-        return Optional.ofNullable(applications.get(reference));
+        return Optional.ofNullable(applicationsByReference.get(reference));
     }
 
-    public Map<HostName, ApplicationInstance> getApplicationsByHostName() {
-        return applicationsByHostName;
+    public Optional<ApplicationInstance> getApplication(HostName hostname) {
+        if (applicationsByHostName == null) {
+            fillMaps();
+        }
+
+        return Optional.ofNullable(applicationsByHostName.get(hostname));
     }
 
     public Map<HostName, List<ServiceInstance>> getServiceInstancesByHostName() {
-        return applications.values().stream()
-                .flatMap(application -> application.serviceClusters().stream())
-                .flatMap(cluster -> cluster.serviceInstances().stream())
-                .collect(Collectors.groupingBy(ServiceInstance::hostName, Collectors.toList()));
+        if (servicesByHostName == null) {
+            fillMaps();
+        }
+
+        return servicesByHostName;
     }
 
-    private static Map<HostName, ApplicationInstance> applicationsByHostNames(Collection<ApplicationInstance> applications) {
-        Map<HostName, ApplicationInstance> hosts = new HashMap<>();
-        for (ApplicationInstance application : applications)
-            for (ServiceCluster cluster : application.serviceClusters())
+    private void fillMaps() {
+        Map<HostName, ApplicationInstance> applicationInstances = new HashMap<>();
+        Map<HostName, List<ServiceInstance>> serviceInstances = new HashMap<>();
+
+        for (ApplicationInstance application : applicationsByReference.values()) {
+            for (ServiceCluster cluster : application.serviceClusters()) {
                 for (ServiceInstance instance : cluster.serviceInstances()) {
-                    ApplicationInstance previous = hosts.put(instance.hostName(), application);
-                    if (previous != null && ! previous.equals(application))
+
+                    ApplicationInstance previous = applicationInstances.put(instance.hostName(), application);
+                    if (previous != null && !previous.equals(application)) {
                         throw new IllegalStateException("Major assumption broken: Multiple application instances contain host " +
-                                                        instance.hostName().s() + ": " + Arrays.asList(previous, application));
+                                instance.hostName().s() + ": " + Arrays.asList(previous, application));
+                    }
+
+                    serviceInstances
+                            .computeIfAbsent(instance.hostName(), key -> new ArrayList<>())
+                            .add(instance);
                 }
-        return hosts;
+            }
+        }
+
+        applicationsByHostName = Collections.unmodifiableMap(applicationInstances);
+        servicesByHostName = Collections.unmodifiableMap(serviceInstances);
     }
 
 }
